// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`with websocket connected, authenticated 1`] = `
<div>
  <Uncontrolled(Navbar)
    bsStyle="default"
    inverse={true}
  >
    <NavbarHeader>
      <img
        alt="logo"
        className="App-logo-animated"
        src="logo.svg"
      />
    </NavbarHeader>
    <Nav
      bsClass="nav"
      className="App-Nav"
      justified={false}
      pullLeft={false}
      pullRight={false}
      stacked={false}
    >
      <LinkContainer
        activeClassName="active"
        exact={false}
        key="casomeric"
        replace={false}
        strict={false}
        to="/casomeric"
      >
        <NavItem
          active={false}
          disabled={false}
          eventKey={2}
        >
          Časoměřič
        </NavItem>
      </LinkContainer>
      <LinkContainer
        activeClassName="active"
        exact={false}
        key="ucastnici"
        replace={false}
        strict={false}
        to="/ucastnici"
      >
        <NavItem
          active={false}
          disabled={false}
          eventKey={3}
        >
          Účastníci
        </NavItem>
      </LinkContainer>
      <LinkContainer
        activeClassName="active"
        exact={false}
        key="prihlaska"
        replace={false}
        strict={false}
        to="/prihlaska"
      >
        <NavItem
          active={false}
          disabled={false}
          eventKey={4}
        >
          Přihláška
        </NavItem>
      </LinkContainer>
      <LinkContainer
        activeClassName="active"
        exact={false}
        replace={false}
        strict={false}
        to="/about"
      >
        <NavItem
          active={false}
          disabled={false}
          eventKey={5}
        >
          O aplikaci
        </NavItem>
      </LinkContainer>
    </Nav>
  </Uncontrolled(Navbar)>
  <main>
    <Switch>
      <Route
        component={[Function]}
        exact={true}
        path="/"
      />
      <Route
        component={[Function]}
        path="/signin"
      />
      <Route
        component={[Function]}
        path="/casomeric"
      />
      <Route
        component={[Function]}
        path="/ucastnici"
      />
      <Route
        component={[Function]}
        path="/prihlaska"
      />
      <Route
        component={[Function]}
        path="/about"
      />
      <Redirect
        push={false}
        to="/"
      />
    </Switch>
  </main>
</div>
`;

exports[`with websocket connected, not authenticated 1`] = `
<div>
  <Uncontrolled(Navbar)
    bsStyle="default"
    inverse={true}
  >
    <NavbarHeader>
      <img
        alt="logo"
        className="App-logo-animated"
        src="logo.svg"
      />
    </NavbarHeader>
    <Nav
      bsClass="nav"
      className="App-Nav"
      justified={false}
      pullLeft={false}
      pullRight={false}
      stacked={false}
    >
      <LinkContainer
        activeClassName="active"
        exact={false}
        replace={false}
        strict={false}
        to="/signin"
      >
        <NavItem
          active={false}
          disabled={false}
          eventKey={1}
        >
          Přihlášení
        </NavItem>
      </LinkContainer>
      <LinkContainer
        activeClassName="active"
        exact={false}
        replace={false}
        strict={false}
        to="/about"
      >
        <NavItem
          active={false}
          disabled={false}
          eventKey={5}
        >
          O aplikaci
        </NavItem>
      </LinkContainer>
    </Nav>
  </Uncontrolled(Navbar)>
  <main>
    <Switch>
      <Route
        component={[Function]}
        exact={true}
        path="/"
      />
      <Route
        component={[Function]}
        path="/signin"
      />
      <Route
        component={[Function]}
        path="/casomeric"
      />
      <Route
        component={[Function]}
        path="/ucastnici"
      />
      <Route
        component={[Function]}
        path="/prihlaska"
      />
      <Route
        component={[Function]}
        path="/about"
      />
      <Redirect
        push={false}
        to="/"
      />
    </Switch>
  </main>
</div>
`;

exports[`with websocket disconnected, authenticated 1`] = `
<div>
  <Uncontrolled(Navbar)
    bsStyle="default"
    inverse={true}
  >
    <NavbarHeader>
      <img
        alt="logo"
        className="App-logo"
        src="logo.svg"
      />
    </NavbarHeader>
    <Nav
      bsClass="nav"
      className="App-Nav"
      justified={false}
      pullLeft={false}
      pullRight={false}
      stacked={false}
    >
      <LinkContainer
        activeClassName="active"
        exact={false}
        key="casomeric"
        replace={false}
        strict={false}
        to="/casomeric"
      >
        <NavItem
          active={false}
          disabled={false}
          eventKey={2}
        >
          Časoměřič
        </NavItem>
      </LinkContainer>
      <LinkContainer
        activeClassName="active"
        exact={false}
        key="ucastnici"
        replace={false}
        strict={false}
        to="/ucastnici"
      >
        <NavItem
          active={false}
          disabled={false}
          eventKey={3}
        >
          Účastníci
        </NavItem>
      </LinkContainer>
      <LinkContainer
        activeClassName="active"
        exact={false}
        key="prihlaska"
        replace={false}
        strict={false}
        to="/prihlaska"
      >
        <NavItem
          active={false}
          disabled={false}
          eventKey={4}
        >
          Přihláška
        </NavItem>
      </LinkContainer>
      <LinkContainer
        activeClassName="active"
        exact={false}
        replace={false}
        strict={false}
        to="/about"
      >
        <NavItem
          active={false}
          disabled={false}
          eventKey={5}
        >
          O aplikaci
        </NavItem>
      </LinkContainer>
    </Nav>
  </Uncontrolled(Navbar)>
  <main>
    <Switch>
      <Route
        component={[Function]}
        exact={true}
        path="/"
      />
      <Route
        component={[Function]}
        path="/signin"
      />
      <Route
        component={[Function]}
        path="/casomeric"
      />
      <Route
        component={[Function]}
        path="/ucastnici"
      />
      <Route
        component={[Function]}
        path="/prihlaska"
      />
      <Route
        component={[Function]}
        path="/about"
      />
      <Redirect
        push={false}
        to="/"
      />
    </Switch>
  </main>
</div>
`;
